--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img class="log" style="margin-left:10%;" src="./img/annauniv.jpg"><br>
                     <br>
                     <figcaption class="font" style="font-size: 16px;margin-left: 70px;">INFO:
-                        <BR>This cgpa calculator is applicable for all anna university affiliated and autonomous colleges </figcaption>
+                        <BR>This cgpa calculator is applicable for all Anna university affiliated and autonomous colleges </figcaption>
                 </figure>
 
 
